# LLM-Quality-Observer

./: .flake8  .gitignore  README.md
.github/workflows/: ci.yml
configs/env/: .env.local.example
docs/: API_GUIDE_v0.6.0.md  EMAIL_SETUP.md  METRICS.md  README-main-us.md  ROADMAP-us.md  ROADMAP.md  TESTING_GUIDE_v0.6.0.md
docs/release_notes/: RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md
infra/alertmanager/: README.md  alertmanager.yml
infra/docker/: docker-compose.local.yml
infra/grafana/: DASHBOARD_GUIDE-ko.md  DASHBOARD_GUIDE-us.md  NEW_DASHBOARDS_GUIDE.md
infra/grafana/dashboards/: advanced-analytics.json  alert-history.json  llm-quality-observer.json
infra/grafana/provisioning/dashboards/: default.yml
infra/prometheus/: prometheus.yml
infra/prometheus/alerts/: README.md  evaluation_alerts.yml  http_alerts.yml  llm_alerts.yml  system_alerts.yml
scripts/: test-v0.6.0.sh
services/dashboard/: Dockerfile  pyproject.toml
services/dashboard/app/: .dockerignore  Dockerfile  __init__.py  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py
services/evaluator/: Dockerfile  pyproject.toml
services/evaluator/app/: config.py  db.py  llm_judge.py  main.py  metrics.py  models.py  notifier.py  rules.py  scheduler.py  schemas.py  utils.py
services/gateway-api/: Dockerfile  pyproject.toml
services/gateway-api/app/: config.py  db.py  llm_client.py  main.py  metrics.py  models.py  schemas.py
services/gateway-api/tests/: __init__.py  test_health.py
services/web/dashboard/: .env.local  package-lock.json
services/web/dashboard/app/: layout.tsx  page.tsx
services/web/dashboard/app/about/: page.tsx
services/web/dashboard/app/evaluations/: page.tsx
services/web/dashboard/app/logs/: page.tsx
services/web/dashboard/app/models/: page.tsx
services/web/dashboard/components/: language-switcher.tsx
services/web/dashboard/components/about/: content.tsx
services/web/dashboard/components/cmsfullform/: sidebar.tsx
services/web/dashboard/components/evaluations/: content.tsx
services/web/dashboard/components/logs/: content.tsx
services/web/dashboard/components/models/: content.tsx
services/web/dashboard/components/overview/: content.tsx
services/web/dashboard/lib/: api.ts  locale-context.tsx  types.ts  use-translations.ts
services/web/dashboard/locales/: en.ts  index.ts  ja.ts  ko.ts  zh.ts
