[project]
name = "llm-quality-observer-dashboard"
version = "0.1.0"
description = "Simple dashboard for LLM Quality Observer"
requires-python = ">=3.12"
dependencies = [
  "streamlit",
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "pydantic>=2.0",
  "pydantic-settings",
  "pandas",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
