[project]
name = "llm-quality-observer-evaluator"
version = "0.1.0"
description = "Evaluator service for LLM Quality Observer"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings",
    "openai",
    "apscheduler>=3.10",
    "httpx",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
