[project]
name = "llm-quality-observer-gateway-api"
version = "0.1.0"
description = "Gateway API for LLM Quality Observer"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "pydantic>=2.0",
  "pydantic-settings",
  "httpx",
  "python-dotenv",
  "openai",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv 관련 설정 필요하면 나중에 추가
