[project]
name = "llm-quality-observer-dashboard"
version = "1.0.0"
description = "Dashboard service for LLM Quality Observer"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
